# speak

./: .gitignore  LICENSE  README.md  listen.py  pyproject.toml  speak.py
src/speak/: __init__.py  listen.py  speak.py
