[project]
name = "speak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Blissett", email = "kevin.blissett@parexel.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.78.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
]

[project.scripts]
speak = "speak:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
